Fixed white space

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   font-family: "Quicksand";
   padding: 0;
-overflow-x: hidden;
+
   
 
 }
